fix: Scrollbar Update

--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -286,16 +286,16 @@ img {
 
 /* Customize scrollbar for webkit browsers */
 ::-webkit-scrollbar {
-  width: 2px; /* Slim scrollbar width */
+  width: 4px; /* Slim scrollbar width */
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #a3a3a3; /* Color of the scrollbar thumb */
-  border-radius: 10px; /* Rounded edges for the scrollbar thumb */
+  background-color: #5e5e5e;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: transparent; /* Optional: background color of the track */
+  background-color: #000000; /* Optional: background color of the track */
 }
 
 /* Customize scrollbar for other browsers */
